--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -189,6 +189,11 @@
             app:argType="edu.rosehulman.gearlocker.models.ItemCategory"
             app:nullable="true"
             android:defaultValue="@null" />
+        <argument
+            android:name="inventoryFragment"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryAdapter$ItemInterface"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/formUploadFragment"
