--- a/app/src/main/res/layout-v28/message_cardview.xml
+++ b/app/src/main/res/layout-v28/message_cardview.xml
@@ -9,11 +9,26 @@
     app:cardBackgroundColor="@color/fui_transparent"
     app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/message_textview"
+    <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/text_bubble_sender"
-        android:paddingVertical="10dp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/message_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:textSize="16sp"
+            android:background="@drawable/text_bubble_sender"/>
+
+        <TextView
+            android:id="@+id/timestamp_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
