--- a/app/src/main/res/layout/check_in.xml
+++ b/app/src/main/res/layout/check_in.xml
@@ -92,6 +92,7 @@
         <TableRow android:layout_marginTop="10dp">
 
             <ImageView
+                android:id="@+id/check_out_photo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/ic_gear"
