--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -115,7 +115,7 @@
     </dialog>
     <fragment
         android:id="@+id/rentalsOverviewManagment"
-        android:name="edu.rosehulman.gearlocker.rentals.RentalsOverviewManagment"
+        android:name="edu.rosehulman.gearlocker.rentalsoverview.RentalsOverviewManagment"
         android:label="RentalsOverviewManagment" >
         <argument
             android:name="isManagement"
@@ -130,6 +130,11 @@
             android:name="isManagement"
             app:argType="boolean"
             android:defaultValue="true"/>
+        <argument
+            android:name="item"
+            app:argType="edu.rosehulman.gearlocker.models.Item"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 
     <fragment
@@ -140,6 +145,11 @@
             android:name="isManagement"
             app:argType="boolean"
             android:defaultValue="true"/>
+        <argument
+            android:name="item"
+            app:argType="edu.rosehulman.gearlocker.models.Item"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 
     <fragment
@@ -199,5 +209,15 @@
         android:id="@+id/formUploadFragment"
         android:name="edu.rosehulman.gearlocker.rentals.FormUploadFragment"
         android:label="FormUploadFragment" />
+    <fragment
+        android:id="@+id/rentalView"
+        android:name="edu.rosehulman.gearlocker.rentalsoverview.RentalView"
+        android:label="RentalView" >
+        <argument
+            android:name="rental"
+            app:argType="edu.rosehulman.gearlocker.models.Rental"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 
 </navigation>
