Items can be returned with check-in. Images are stored in FireStore, but do not yet update properly. Rentals will close when all items are checked in. They can also be confirmed through the management to move from being a request to a full rental.

--- a/app/src/main/res/layout/check_in.xml
+++ b/app/src/main/res/layout/check_in.xml
@@ -95,6 +95,7 @@
                 android:id="@+id/check_out_photo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_gear"
                 android:contentDescription="photo_from_check_out" />
 
@@ -102,7 +103,7 @@
                 android:id="@+id/check_in_photo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_gear"
                 android:contentDescription="photo_from_check_in">
 
