--- a/app/src/main/res/layout/add_edit_management.xml
+++ b/app/src/main/res/layout/add_edit_management.xml
@@ -225,7 +225,7 @@ helpful to the renter(s)."
         <ImageView
             android:id="@+id/gear_image"
             android:layout_gravity="center"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="5dp"
             android:maxHeight="100dp"
