--- a/app/src/main/res/layout/delete_card_view.xml
+++ b/app/src/main/res/layout/delete_card_view.xml
@@ -30,8 +30,10 @@
             android:weightSum="5">
 
             <ImageView
+                android:id="@+id/delete_image"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:scaleType="fitCenter"
                 android:layout_weight="3"
                 app:srcCompat="@android:drawable/ic_menu_report_image" />
             <LinearLayout
