--- a/app/src/main/res/layout/gear_summary_popup.xml
+++ b/app/src/main/res/layout/gear_summary_popup.xml
@@ -53,7 +53,7 @@
         android:id="@+id/item_photo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toEndOf="@id/description_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cost_text_view"
