--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,6 +30,12 @@
             android:name="isManagement"
             app:argType="boolean"
             android:defaultValue="false"/>
+        <action
+            android:id="@+id/action_navigation_inventory_to_popUpInventory"
+            app:destination="@id/popUpInventory" />
+        <action
+            android:id="@+id/action_navigation_inventory_to_cartFragment"
+            app:destination="@id/cartFragment" />
     </fragment>
 
     <fragment
@@ -87,6 +93,11 @@
             android:name="isManagement"
             app:argType="boolean"
             android:defaultValue="false"/>
+        <argument
+            android:name="itemInterface"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryAdapter$ItemInterface"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </dialog>
 
     <activity
@@ -106,7 +117,14 @@
     <fragment
         android:id="@+id/cartFragment"
         android:name="edu.rosehulman.gearlocker.cart.CartFragment"
-        android:label="CartFragment" />
+        android:label="CartFragment" >
+        <argument
+            android:name="itemInterface"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryAdapter$ItemInterface" />
+        <argument
+            android:name="cart"
+            app:argType="edu.rosehulman.gearlocker.models.Cart" />
+    </fragment>
     <fragment
         android:id="@+id/splashFragment"
         android:name="edu.rosehulman.gearlocker.SplashFragment"
