--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -167,14 +167,27 @@
         <argument
             android:name="item"
             app:argType="edu.rosehulman.gearlocker.models.Item" />
+        <argument
+            android:name="itemInterface"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryAdapter$ItemInterface" />
+        <action
+            android:id="@+id/action_popUpInventory_to_addItem"
+            app:destination="@id/addItem" />
     </dialog>
     <fragment
         android:id="@+id/addItem"
         android:name="edu.rosehulman.gearlocker.inventory.AddItem"
         android:label="AddItem" >
         <argument
-            android:name="inventoryFragment"
-            app:argType="edu.rosehulman.gearlocker.inventory.InventoryFragment"
+            android:name="itemInterface"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryAdapter$ItemInterface" />
+        <argument
+            android:name="isAdd"
+            app:argType="boolean"
+            android:defaultValue="true" />
+        <argument
+            android:name="item"
+            app:argType="edu.rosehulman.gearlocker.models.Item"
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
